# django-phonedir

./: .gitignore  Pipfile  README.md  db.json  makemigrations.py  pyproject.toml  runtests.py
django_phonedir/: admin.py  apps.py  models.py  urls.py  views.py
django_phonedir/migrations/: 0001_initial.py
django_phonedir/templates/django_phonedir/: departments_listing.html  search_form.html
django_phonedir/tests/: settings.py  tests.py
phonedir/: admin.py  apps.py  urls.py  views.py
phonedir/templates/phonedir/: department_detail.html  search_contact_results.html
